2003-04-16  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :

	  - Fixed relative/absolute path problem with --with-smodels.

	  - Smodels path now included in C/CXXFLAGS and LDFLAGS.

2003-04-15  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* README :

	  - Updated readme.

	* configure :
	* configure.ac :

	  - Fixed smodels checking mechanism.

2003-04-14  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :
	* common/Makefile.in :
	* common/list.cpp :
	* common/numberlist.cpp :
	* common/numberlist.h :
	* common/stringlist.cpp :
	* common/stringlist.h :
	* kb/Makefile.in :
	* kb/atom.cpp :
	* kb/atom.h :
	* kb/consttab.cpp :
	* kb/consttab.h :
	* kb/expression.cpp :
	* kb/expression.h :
	* kb/kb.cpp :
	* kb/kb.h :
	* kb/sequence.cpp :
	* kb/sequence.h :
	* kb/symtab.cpp :
	* kb/symtab.h :
	* kb/transtab.cpp :
	* kb/transtab.h :
	* main/Makefile.in :
	* main/vlad.cpp :
	* parser/Makefile.in :
	* parser/parser.y :
	* parser/scanner.l :

	  - Changed include statements to have the prefix vlad/* to prevent
	    inclusion of other header files of the same name.

	* Makefile.in :
	* configure :
	* configure.ac :
	* common/Makefile.in :
	* kb/Makefile.in :
	* main/Makefile.in :
	* parser/Makefile.in :

	  - Cleanup of build system. Files are now symlinked in the dist
	    directory.

	* configure.ac :
	* configure :

	  - Now accepts --with-smodels-src.

	  - Now allows users to override CFLAGS, CXXFLAGS and LDFLAGS.

2003-04-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.h :
	* kb/kb.cpp :

	  - Combined the generate_*() functions into generate_nlp() for
	    efficiency.

	  - Cleanup.

	* common/list.cpp :
	* common/list.h :

	  - Added macro for easy comparisons between two list_items.

	  - Safety check before purge().

	* kb/atom.cpp :
	* kb/consttab.cpp :
	* kb/kb.cpp :
	* kb/sequence.cpp :
	* kb/transtab.cpp :

	  - Now empty lists are stored as NULL pointers to save space.
