@@ -1,5 +1,10 @@
 2003-04-16  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* kb/wrapper.h :
+	* kb/wrapper.cpp :
+
+	  - Added smodels wrapper class.
+
 	* configure :
 	* configure.ac :
 
